--- a/views/polyomino.jade
+++ b/views/polyomino.jade
@@ -1,14 +1,7 @@
 doctype html
 html 
     head
-        title Polyomino Page
-<body>
-<canvas id="myCanvas" width="7000" height="4000" style="border:1px solid #d3d3d3;">
-Your browser does not support the HTML5 canvas tag.</canvas>
-<script src = "./javascripts/main.js"></script>
-<script>
-    //drawPolyomino("nnennesse.enessss.wnnwsswnnwsw",10,1000,20,0,0,4000,1500);
-    
-</script>
-</body>
-</html>
+        title = title
+    body
+        script.
+            drawing.tileAllCanvases();
