--- a/views/polyomino.jade
+++ b/views/polyomino.jade
@@ -4,4 +4,5 @@ html
         title = title
     body
         script.
+            let drawing = !{drawing};
             drawing.tileAllCanvases();
