disable text and font code for testing FontFace error

--- a/views/polyomino.jade
+++ b/views/polyomino.jade
@@ -4,5 +4,4 @@ html
         title = title
     body
         script.
-            let drawing = !{drawing};
-            drawing.tileAllCanvases();
+            !{drawing.tileAllCanvases()};
