use main.js to execute drawing client-side because drawing needs DOM access

--- a/views/polyomino.jade
+++ b/views/polyomino.jade
@@ -4,5 +4,4 @@ html
         title = title
     body
         canvas(id="myCanvas",width="7000",height="4000",style="border:1px solid #d3d3d3;")
-        script.
-            !{drawing.tileAllCanvases()};
+        script(src=''../main.js', type='text/javascript')
