--- a/views/polyomino.jade
+++ b/views/polyomino.jade
@@ -3,5 +3,7 @@ html
     head
         title = title
     body
-        canvas(id="myCanvas",width="7000",height="4000",style="border:1px solid #d3d3d3;")
-        script(src='../main.js', type='text/javascript')
+        //- canvas(id="myCanvas",width="7000",height="4000",style="border:1px solid #d3d3d3;")
+        //- script(src='../main.js', type='text/javascript')
+        for dataURL in dataURLs
+            img(src=dataURL)
