--- a/views/polyomino.jade
+++ b/views/polyomino.jade
@@ -3,5 +3,7 @@ html
     head
         title= title
     body
-        for dataURL in dataURLs
-            img(src=dataURL)
+        //- for dataURL in dataURLs
+        //-    img(src=dataURL)
+        for SVG in SVGs
+            div(innerHTML=SVG)
