--- a/views/polyomino.jade
+++ b/views/polyomino.jade
@@ -6,4 +6,4 @@ html
         //- for dataURL in dataURLs
         //-    img(src=dataURL)
         for SVG in SVGs
-            div!=SVG
+            !{SVG}
