--- a/views/polyomino.jade
+++ b/views/polyomino.jade
@@ -3,7 +3,9 @@ html
     head
         title= title
     body
-        //- for dataURL in dataURLs
-        //-    img(src=dataURL)
-        for SVG in SVGs
-            !{SVG}
+        if dataURLs
+            for dataURL in dataURLs
+                img(src=dataURL)
+        if SVGs
+            for SVG in SVGs
+                !{SVG}
